Challenge 2: refactor